# monotone-bipartition

./: .drone.yml  .gitignore  .travis.yml  LICENSE  README.md  multidim.py  pyproject.toml  requirements.txt  setup.py  test_multidim.py
benchmarks/: Experiments.py
benchmarks/toy_car_speeds/: to_car_0.csv  to_car_1.csv  to_car_2.csv  to_car_3.csv  to_car_4.csv  to_car_5.csv
monotone_bipartition/: __init__.py  bipartition.py  hausdorff.py  rectangles.py  refine.py  search.py  test_bipartition.py  test_hausdorff.py  test_project.py  test_rectangles.py  test_refine.py  utils.py
multidim_threshold/: __init__.py  hausdorff.py  io.py  learn.py  learn_region.py  projection.py  rec_set.capnp  rectangles.py  refine.py  search.py  test_hausdorff.py  test_learn.py  test_rectangles.py  test_refine.py  utils.py
